--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
                         <div class="col-1">
-                            <a href="index.html"><img src="images/logo.svg" alt="logotype" class="logo-rotate"></a>
+                            <a href="index.html"><img src="images/logo2.svg" alt="logotype" class="logo-rotate"></a>
                         </div>
                         <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
@@ -28,6 +28,10 @@
                                 <a class="p-3 p-lg-0" href="tests.html">Тесты</a>
                                 <a class="p-3 p-lg-0" target="_blank" href="https://getbootstrap.com/docs/versions/">Документация</a>
                                 <a class="p-3 p-lg-0" target="_blank" href="https://getbootstrap.com/">Скачать Bootstrap</a>
+                                <div>
+                                    <span class="p-3 me-3 p-lg-0 theme-switcher"><img src="images/theme-btn.svg" alt="theme-btn"></span>
+                                    <a class="p-3 p-lg-0 profile-icon" href="login.html"><img src="images/profile-btn.svg" alt="profile-btn"></a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -41,21 +45,21 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7 col-sm-12 hero-text ">
-                        <h1>Основы адаптивной верстки на Bootstrap</h1>
-                        <p>Bootstrap - это Мощный, расширяемый и многофункциональный фронтенд инструментарий, который
+                        <h1 class="changeable-text">Основы адаптивной верстки на Bootstrap</h1>
+                        <p class="changeable-text">Bootstrap - это Мощный, расширяемый и многофункциональный фронтенд инструментарий, который
                             поможет вам создавать веб-сайты, которые выглядят отлично на любых устройствах, от
                             компьютеров до смартфонов.</p>
 
                         <div class="row p-3 p-lg-0 ms-xl-0 ms-lg-1 d-flex justify-content-between">
                             <a href="#lessons" class="col-xl-5 col-md-5 col-sm-12 mb-3 p-0 ">
-                                <div class="w-100 hero-btn hero-btn-first d-flex align-items-center justify-content-center">
-                                    <img src="images/book-half.svg" alt="book"> Перейти к урокам
+                                <div class="w-100 hero-btn hero-btn-first d-flex align-items-center justify-content-center ">
+                                    Перейти к урокам
                                 </div>
                             </a>
                             
                             <a href="tests.html" class="col-xl-5 col-md-5 col-sm-12 mb-3 me-lg-5 p-0">
                                 <div class="w-100 hero-btn hero-btn-second d-flex align-items-center justify-content-center">
-                                    <img src="images/book-half-test.svg" alt="book">Перейти к тестам
+                                    <span class="">Перейти к тестам</span>
                                 </div>
                             </a>
                         </div>
@@ -72,7 +76,7 @@
         <section class="lessons" id="lessons">
             <div class="container">
                 <div class="row d-flex justify-content-center justify-content-xxl-start">
-                    <h2 class="text-center">Уроки</h2>
+                    <h2 class="text-center changeable-text">Уроки</h2>
                     <a href="lessons/lesson-1.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
                             <h3 class="text-center pt-5">Урок 1 Введение и установка Bootstrap</h3>
@@ -140,27 +144,28 @@
         </section>
     </main>
 
-    <footer class="d-flex align-items-center">
+    <footer class="d-flex align-items-center footer">
         <div class="container">
             <div class="row justify-content-between">
                 <div class="footer-nav col-lg-3 d-flex flex-column">
-                    <p>Bootstrap 5.3.2</p>
-                    <span><a target="_blank" href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">Документация</a></span>
-                    <span><a target="_blank" href="https://getbootstrap.com/docs/5.3/examples/">Примеры</a></span>
-                    <span><a target="_blank" href="https://icons.getbootstrap.com/">Иконки</a></span>
-                    <span><a target="_blank" href="https://themes.getbootstrap.com/">Темы</a></span>
-                    <span><a target="_blank" href="https://blog.getbootstrap.com/">Блог</a></span>
+                    <p class="changeable-text">Bootstrap 5.3.2</p>
+                    <span ><a class="changeable-text" target="_blank" href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">Документация</a></span>
+                    <span><a class="changeable-text" target="_blank" href="https://getbootstrap.com/docs/5.3/examples/">Примеры</a></span>
+                    <span><a class="changeable-text" target="_blank" href="https://icons.getbootstrap.com/">Иконки</a></span>
+                    <span><a class="changeable-text" target="_blank" href="https://themes.getbootstrap.com/">Темы</a></span>
+                    <span><a class="changeable-text" target="_blank" href="https://blog.getbootstrap.com/">Блог</a></span>
                 </div>
 
                 <div class="footer-nav col-lg-4 d-flex mt-5 mt-lg-0 flex-column">
-                    <p>Автор</p>
-                    <span>Киценко И. В.</span>
-                    <span>Ilyakitsenko@proton.me</span>
-                    <span>2023-2024</span>
+                    <p class="changeable-text">Автор</p>
+                    <span class="changeable-text">Киценко И. В.</span>
+                    <span class="changeable-text">Ilyakitsenko@proton.me</span>
+                    <span class="changeable-text">2023-2024</span>
                 </div>
             </div>
         </div>
     </footer>
+    <script src="js/theme-switcher.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
 
