--- a/tests.html
+++ b/tests.html
@@ -17,7 +17,7 @@
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
                         <div class="col-1">
-                            <a href="index.html"><img src="images/logo.svg" alt="logotype" class="logo-rotate"></a>
+                            <a href="index.html"><img src="images/logo2.svg" alt="logotype" class="logo-rotate"></a>
                         </div>
                         <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
@@ -28,6 +28,10 @@
                                 <a class="p-3 p-lg-0" href="tests.html">Тесты</a>
                                 <a class="p-3 p-lg-0" target="_blank" href="https://getbootstrap.com/docs/versions/">Документация</a>
                                 <a class="p-3 p-lg-0" target="_blank" href="https://getbootstrap.com/">Скачать Bootstrap</a>
+                                <div>
+                                    <span class="p-3 me-3 p-lg-0 theme-switcher"><img src="images/theme-btn.svg" alt="theme-btn"></span>
+                                    <a class="p-3 p-lg-0 profile-icon" href="login.html"><img src="images/profile-btn.svg" alt="profile-btn"></a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -41,7 +45,7 @@
         <section class="tests">
             <div class="container">
                 <div class="row d-flex justify-content-center justify-content-xxl-start">
-                    <h1 class="text-center ">Тестирование по темам уроков</h1>
+                    <h1 class="text-center changeable-text">Тестирование по темам уроков</h1>
                     <a href="tests/test-1.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="test-card d-flex flex-column justify-content-between align-items-center">
                             <h3 class="text-center pt-5">Тест по уроку 1 Введение и установка Bootstrap</h3>
@@ -109,27 +113,28 @@
         </section>
     </main>
 
-    <footer class="d-flex align-items-center">
+    <footer class="d-flex align-items-center footer">
         <div class="container">
             <div class="row justify-content-between">
                 <div class="footer-nav col-lg-3 d-flex flex-column">
-                    <p>Bootstrap 5.3.2</p>
-                    <span><a target="_blank" href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">Документация</a></span>
-                    <span><a target="_blank" href="https://getbootstrap.com/docs/5.3/examples/">Примеры</a></span>
-                    <span><a target="_blank" href="https://icons.getbootstrap.com/">Иконки</a></span>
-                    <span><a target="_blank" href="https://themes.getbootstrap.com/">Темы</a></span>
-                    <span><a target="_blank" href="https://blog.getbootstrap.com/">Блог</a></span>
+                    <p class="changeable-text">Bootstrap 5.3.2</p>
+                    <span ><a class="changeable-text" target="_blank" href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">Документация</a></span>
+                    <span><a class="changeable-text" target="_blank" href="https://getbootstrap.com/docs/5.3/examples/">Примеры</a></span>
+                    <span><a class="changeable-text" target="_blank" href="https://icons.getbootstrap.com/">Иконки</a></span>
+                    <span><a class="changeable-text" target="_blank" href="https://themes.getbootstrap.com/">Темы</a></span>
+                    <span><a class="changeable-text" target="_blank" href="https://blog.getbootstrap.com/">Блог</a></span>
                 </div>
 
                 <div class="footer-nav col-lg-4 d-flex mt-5 mt-lg-0 flex-column">
-                    <p>Автор</p>
-                    <span>Киценко И. В.</span>
-                    <span>Ilyakitsenko@proton.me</span>
-                    <span>2023-2024</span>
+                    <p class="changeable-text">Автор</p>
+                    <span class="changeable-text">Киценко И. В.</span>
+                    <span class="changeable-text">Ilyakitsenko@proton.me</span>
+                    <span class="changeable-text">2023-2024</span>
                 </div>
             </div>
         </div>
     </footer>
+    <script src="js/theme-switcher.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
 
