final changes before move to laravel

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             <div class="container">
                 <div class="row d-flex justify-content-center justify-content-xxl-start">
                     <h2 class="text-center changeable-text">Уроки</h2>
+                    <h3 class="text-center mb-5">Модуль 1 </h3>
                     <a href="lessons/lesson-1.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
                             <h3 class="text-center pt-5">Урок 1 Введение и установка Bootstrap</h3>
@@ -95,6 +96,7 @@
                             <img src="images/less-1.svg" alt="lesson-img">
                         </div>
                     </a>
+                    <h3 class="text-center my-5">Модуль 2 </h3>
                     <a href="lessons/lesson-4.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
                             <h3 class="text-center pt-5">Урок 4 Адаптивные колонки и flex-классы</h3>
@@ -113,6 +115,7 @@
                             <img src="images/less-1.svg" alt="lesson-img">
                         </div>
                     </a>
+                    <h3 class="text-center my-5">Модуль 3 </h3>
                     <a href="lessons/lesson-7.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
                             <h3 class="text-center pt-5">Урок 7 Навигация и пагинация</h3>
@@ -131,7 +134,7 @@
                             <img src="images/less-1.svg" alt="lesson-img">
                         </div>
                     </a>
-                    
+                    <h3 class="text-center my-5">Модуль 4 </h3>
                     <a href="lessons/lesson-10.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
                             <h3 class="text-center pt-5">Урок 10 Вёрстка адаптивного лендинга</h3>
