--- a/lessons/lesson-2.html
+++ b/lessons/lesson-2.html
@@ -179,7 +179,7 @@
         </section>
     </main>
 
-    <<footer class="d-flex align-items-center">
+    <footer class="d-flex align-items-center">
         <div class="container">
             <div class="row justify-content-between">
                 <div class="footer-nav col-lg-3 d-flex flex-column">
