final commit in HTML version

--- a/lessons/lesson-10.html
+++ b/lessons/lesson-10.html
@@ -208,7 +208,7 @@
                     </div>
 
                     <p class="mt-5">
-                        Я хотел чтобы картинка слайдера покрывала весь вьюпорт, и не ограничевалась контейнером, поэтому я поместил её в <code>.container-fluid</code>. Из стилей тут лишь задана высота слайдера, и цвет заднего фона, тк это лишь макет, и с картинками и текстами мы не работаем, было решено просто залить слайд каноничным цветом. И теперь наш сайт имеет следующий вид:
+                        Я хотел чтобы картинка слайдера покрывала весь вьюпорт, и не ограничивалась контейнером, поэтому я поместил её в <code>.container-fluid</code>. Из стилей тут лишь задана высота слайдера, и цвет заднего фона, тк это лишь макет, и с картинками и текстами мы не работаем, было решено просто залить слайд каноничным цветом. И теперь наш сайт имеет следующий вид:
                     </p>
 
                     <img class="col-11 col-md-11 lesson-img mb-5" src="../images/lesson-10-imgs/slider.png" alt="slider-example">
@@ -396,7 +396,7 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                                    Внутри представлен полынй код всего html документа, включая стили.
+                                    Внутри представлен полный код всего html документа, включая стили.
                                 </button>
                             </h2>
                             <div id="collapseOne" class="accordion-collapse collapse " data-bs-parent="#accordionExample">
