--- a/lessons/lesson-5.html
+++ b/lessons/lesson-5.html
@@ -61,7 +61,7 @@
                     <h3>Выравнивание изображений</h3>
                     
                     <p>
-                        <code>block</code> изображения можно центрировать с помошью классов margin utility. Например <code>.float-start</code>, <code>.float-end</code> или <code>.mx-auto</code> для центрирования слева, справа и по центру соответственно. Не забудьте так же прописать класс <code>.d-block</code>
+                        <code>block</code> изображения можно центрировать с помощью классов margin utility. Например <code>.float-start</code>, <code>.float-end</code> или <code>.mx-auto</code> для центрирования слева, справа и по центру соответственно. Не забудьте так же прописать класс <code>.d-block</code>
                     </p>
 
                     <p>
@@ -81,7 +81,7 @@
                     <h3>Figure</h3>
 
                     <p>
-                        Если вы хотите разместить в своём документе картинку с подписью с помошью конструкции <code>&ltfigure&gt</code>, используйте включённые в bootstrap классы <code>.figure</code> <code>.figure-img</code> и <code>.figure-caption</code> для придания некоторых базовых стилей HTML5 элементам.
+                        Если вы хотите разместить в своём документе картинку с подписью с помощью конструкции <code>&ltfigure&gt</code>, используйте включённые в bootstrap классы <code>.figure</code> <code>.figure-img</code> и <code>.figure-caption</code> для придания некоторых базовых стилей HTML5 элементам.
                     </p>
 
                     <p>
