--- a/tests/test-4.html
+++ b/tests/test-4.html
@@ -48,7 +48,7 @@
                     <form action="#">
                         <div class="question">
                             <h2 class="col-12 col-lg-6">Вопрос 1</h2>
-                            <p>Какакя ширина будет у элемента с классом <code>.col-12 col-md-3</code>, если ширина экрана 1920 пикселей?</p>
+                            <p>Какая ширина будет у элемента с классом <code>.col-12 col-md-3</code>, если ширина экрана 1920 пикселей?</p>
                             <input type="radio" id="question-1-1" name="question-1"> <label for="question-1-1">12 колонок</label>
                             <input type="radio" id="question-1-2" name="question-1"> <label for="question-1-2">3 колонки</label>
                             <input type="radio" id="question-1-3" name="question-1"> <label for="question-1-3">6 колонок</label>
@@ -72,13 +72,13 @@
                         </div>
                         <div class="question">
                             <h2 class="col-12 col-lg-6">Вопрос 4</h2>
-                            <p>Свойства какого класса будет приминяться у элемента с классами <code>.p-3 p-md-10</code>, если ширина экрана 1920px?</p>
+                            <p>Свойства какого класса будет применяться у элемента с классами <code>.p-3 p-md-10</code>, если ширина экрана 1920px?</p>
                             <input type="radio" id="question-4-1" name="question-4"> <label for="question-4-1"><code>p-3</code></label>
                             <input type="radio" id="question-4-2" name="question-4"> <label for="question-4-2"><code>p-md-10</code></label>
                         </div>
                         <div class="question">
                             <h2 class="col-12 col-lg-6">Вопрос 5</h2>
-                            <p>Будет ли приминяться свойство класса <code>.d-xxl-inline-flex</code>, если ширина экрана 3440px? </p>
+                            <p>Будет ли применяться свойство класса <code>.d-xxl-inline-flex</code>, если ширина экрана 3440px? </p>
                             <input type="radio" id="question-5-1" name="question-5"> <label for="question-5-1">Будет</label>
                             <input type="radio" id="question-5-2" name="question-5"> <label for="question-5-2">Не будет</label>
                         </div>
