--- a/tests/test-5.html
+++ b/tests/test-5.html
@@ -76,7 +76,7 @@
                         </div>
                         <div class="question">
                             <h2 class="col-12 col-lg-6">Вопрос 5</h2>
-                            <p>Какой класс выравинивает описание фигуры в 5 уроке по правому краю? </p>
+                            <p>Какой класс выравнивает описание фигуры в 5 уроке по правому краю? </p>
                             <input type="radio" id="question-5-1" name="question-5"> <label for="question-5-1"><code>.float-right</code></label>
                             <input type="radio" id="question-5-2" name="question-5"> <label for="question-5-2"><code>.text-end</code></label>
                             <input type="radio" id="question-5-3" name="question-5"> <label for="question-5-3"><code>.text-right</code></label>
