--- a/tests/test-7.html
+++ b/tests/test-7.html
@@ -58,7 +58,7 @@
                             <h2 class="col-12 col-lg-6">Вопрос 2</h2>
                             <p>Что делает класс <code>.navbar-toggler</code>?</p>
                             <input type="radio" id="question-2-1" name="question-2"> <label for="question-2-1">Переключает видимость навбара</label>
-                            <input type="radio" id="question-2-2" name="question-2"> <label for="question-2-2">Закрепляет навбар при прокрутки страницы</label>
+                            <input type="radio" id="question-2-2" name="question-2"> <label for="question-2-2">Закрепляет навбар при прокрутке страницы</label>
                             <input type="radio" id="question-2-3" name="question-2"> <label for="question-2-3">Создаёт навбар</label>
                         </div>
                         <div class="question">
