--- a/tests/test-8.html
+++ b/tests/test-8.html
@@ -65,13 +65,13 @@
                         <div class="question">
                             <h2 class="col-12 col-lg-6">Вопрос 3</h2>
                             <p>Что делает класс <code>.accordion-flush</code>?</p>
-                            <input type="radio" id="question-3-1" name="question-3"> <label for="question-3-1">Удаляет некоторые границы аккордиона</label>
-                            <input type="radio" id="question-3-2" name="question-3"> <label for="question-3-2">Заливает аккордион цветом</label>
-                            <input type="radio" id="question-3-3" name="question-3"> <label for="question-3-3">Делает аккордионы всегда открытыми</label>
+                            <input type="radio" id="question-3-1" name="question-3"> <label for="question-3-1">Удаляет некоторые границы аккордеона</label>
+                            <input type="radio" id="question-3-2" name="question-3"> <label for="question-3-2">Заливает аккордеон цветом</label>
+                            <input type="radio" id="question-3-3" name="question-3"> <label for="question-3-3">Делает аккордеоны всегда открытыми</label>
                         </div>
                         <div class="question">
                             <h2 class="col-12 col-lg-6">Вопрос 4</h2>
-                            <p>Что нужно сделать чтобы включить автозапуск каруселей?</p>
+                            <p>Что нужно сделать, чтобы включить автозапуск каруселей?</p>
                             <input type="radio" id="question-4-1" name="question-4"> <label for="question-4-1">Установить опцию <code>data-bs-ride</code></label>
                             <input type="radio" id="question-4-2" name="question-4"> <label for="question-4-2">Установить опцию <code>auto-ride="true"</code></label>
                             <input type="radio" id="question-4-3" name="question-4"> <label for="question-4-3">Установить опцию <code>auto-start="true"</code></label>
@@ -79,7 +79,7 @@
                         </div>
                         <div class="question">
                             <h2 class="col-12 col-lg-6">Вопрос 5</h2>
-                            <p>С помощью какого класса был открыт первый аккордион в 8 уроке?</p>
+                            <p>С помощью какого класса был открыт первый аккордеон в 8 уроке?</p>
                             <input type="radio" id="question-5-1" name="question-5"> <label for="question-5-1"><code>.open</code> </label>
                             <input type="radio" id="question-5-2" name="question-5"> <label for="question-5-2"><code>.show</code></label>
                             <input type="radio" id="question-5-3" name="question-5"> <label for="question-5-3"><code>.accordion</code></label>
